# agentic-ai-identity

./: .env sample  .gitignore  README.md  audit.jsonl  debugging.md  description.txt  docker-compose.yml  main.py  plan.md  plan_new.md  pyproject.toml  setup.txt  step.md
agent/: agent.py  schemas.py  supervisor.py
gateway/: auth.py  gateway.py
identity/: delegator.py  refresher.py  signer.py
observability/: langfuse_client.py
policy/: data.json  policy.rego
scripts/: extract_key.py  test_delegation.py  test_gateway.py  test_judge.py  test_phase6.py  test_phase7.py  test_policy.py  test_security.py
security/: audit.py  judge.py  sanitizer.py
tools/: tool_api.py
